# telegram-channel-factory

./: .env.demo  .env.deploy  .env.example  .env.live.example  .env.telegram-test  .gitignore  =3.13.1  ACCESS_MODEL_V1.md  AGENTS_SCREEN_V1.md  AGENT_ROLES_V1.md  AGENT_SETTINGS_V1.md  AGENT_TEAM_PRESETS_V1.md  AUDIT_HISTORY_V1.md  BOT_ADMIN_PANEL_V1.md  BOT_SETUP.md  BOT_UI_TESTS_V1.md  CHANNEL_CONNECTION_FLOW.md  CHANNEL_CREATION_REALITY_V1.md  CHANNEL_CREATION_WIZARD_V1.md  CHANNEL_SETTINGS_SCREEN_V1.md  CONFIG_VERSIONING_V1.md  CONTENT_PLAN_SCREEN_V1.md  CONTROLLED_USER_TEST_PLAN.md  CONTROLLED_USER_TEST_REPORT_2026-03-14.md  CONTROLLED_USER_TEST_RESULTS_TEMPLATE.md  DATA_MODEL_EXPANSION_V1.md  DEPLOY.md  DOCKER_DEPLOY_VALIDATION_V1.md  DRAFTS_SCREEN_V1.md  Dockerfile  EDITABLE_CONFIG_LAYER_V1.md  END_TO_END_INTEGRATION_TESTS_V1.md  ENV_MODES.md  FINAL_QA_RUNBOOK.md  FINAL_QA_UI_E2E_2026-03-13.md  FINAL_QA_V1.md  FIRST_USER_LAUNCH_PATH.md  GO_NO_GO_CHECK.md  IMPLEMENTATION_ROADMAP_V1.md  INTERNAL_PILOT_COST_VALIDATION_PLAN.md  (+51 more)
alembic/: env.py
app/: api_app.py  main.py
release_records/: 2026-03-14-0.1.0-mvp.md  TEMPLATE.md
runtime/: bot_status.json
scripts/: check_api_status.py  check_bot_status.py  check_runtime_alerts.py  check_worker_status.py  collect_internal_pilot_evidence.py  deploy-prod.sh  deploy_as_tcf.sh  init_db.py  prepare_server_dirs.sh  release_update.sh  run_bot.py  run_internal_mock_pilot.py  run_real_llm_staging_scenario.py  run_worker.py  seed_demo.py  verify_controlled_user_tests.py  verify_second_round_user_tests.py
tests/: conftest.py  (+58 more)
(+181 files in other folders)
