[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-channel-factory"
version = "0.1.0"
description = "AI Telegram Channel Factory backend + bot control layer"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "aiogram>=3.13.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
